Fixed padding on tablet size

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -144,7 +144,7 @@
             background-color: gray;
             overflow: hidden;
             height: content;
-            padding-top: 20px;
+            padding-top: 22px;
             margin-right: 1%;
             margin-bottom: 1%;
             }
